RESOLVED FIXED 53907
Relative .. in URL paths shouldn't skip adjacent / characters
https://bugs.webkit.org/show_bug.cgi?id=53907
Summary Relative .. in URL paths shouldn't skip adjacent / characters
Adam Barth
Reported 2011-02-07 00:11:45 PST
Relative .. in URL paths shouldn't skip adjacent / characters
Attachments
Patch (4.03 KB, patch)
2011-02-07 00:12 PST, Adam Barth
no flags
Adam Barth
Comment 1 2011-02-07 00:12:54 PST
Eric Seidel (no email)
Comment 2 2011-02-07 02:56:22 PST
Comment on attachment 81456 [details] Patch LGTM! Thanks.
WebKit Commit Bot
Comment 3 2011-02-07 03:23:25 PST
The commit-queue encountered the following flaky tests while processing attachment 81456 [details]: fast/css/font-face-download-error.html bug 51757 (author: yuzo@google.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2011-02-07 03:24:42 PST
Comment on attachment 81456 [details] Patch Clearing flags on attachment: 81456 Committed r77799: <http://trac.webkit.org/changeset/77799>
WebKit Commit Bot
Comment 5 2011-02-07 03:24:47 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6 2011-02-07 04:12:32 PST
http://trac.webkit.org/changeset/77799 might have broken Leopard Intel Release (Tests) The following tests are not passing: platform/mac/fast/AppleScript/date.html
Note You need to log in before you can comment on or make changes to this bug.