2011-02-07  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        Relative .. in URL paths shouldn't skip adjacent / characters
        https://bugs.webkit.org/show_bug.cgi?id=53907

        Add some more test cases.

        * fast/url/path-expected.txt:
        * fast/url/script-tests/path.js:
2011-02-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Relative .. in URL paths shouldn't skip adjacent / characters
        https://bugs.webkit.org/show_bug.cgi?id=53907

        Our new behavior matches Firefox, Chrome, and IE.

        * platform/KURL.cpp:
        (WebCore::copyPathRemovingDots):

Canonical link: https://commits.webkit.org/67860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77799 268f45cc-cd09-0410-ab3c-d52691b4dbfc